--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
-    <script src="script.js">
+    <div id="header">Welcome to Nhyk365's Rock, Paper and Scissors!</div>
+    <div id="'subTitle">To play choose one between rock, paper or scissor!</div>
+    <div id="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    <div id="result"></div>
+    <div id="score"></div>
 
-    </script>
 </body>
 
 </html>
