--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
     <script src="script.js" defer></script>
+
+    <link href="style.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 
 <body>
     <div id="header">Welcome to Nhyk365's Rock, Paper and Scissors!</div>
-    <div id="'subTitle">To play choose one between rock, paper or scissor!</div>
-    <div id="buttons">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+    <div id="game">
+        <div id="subTitle">To play choose one between rock, paper or scissor!</div>
+        <div id="buttons">
+            <button id="rock" class="btn btn-shadow-drop btn-shadow-drop--black">Rock</button>
+            <button id="paper" class="btn btn-shadow-drop btn-shadow-drop--black">Paper</button>
+            <button id="scissors" class="btn btn-shadow-drop btn-shadow-drop--black">Scissors</button>
+        </div>
+        <div id="result"></div>
+        <div id="score"></div>
     </div>
-    <div id="result"></div>
-    <div id="score"></div>
 
 </body>
 
